tests/compiler_errors/fn_invalid_token_in_sig.tlp
fn foo "Hello World" do end